[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/Interactable/Interactable.gd" type="Script" id=1]
[ext_resource path="res://entities/Interactable/Hover.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderShape" id=1]
height = 1.0

[node name="Interactable" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="Hover" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="." to="." method="_on_Interactable_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Interactable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Interactable_mouse_exited"]
